# micro-g-robotics

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  flight-checklist.md  micro_g.repos  requirements-build.txt  requirements-dev.txt
.devcontainer/: devcontainer copy.json  devcontainer.json  what-dos.json
.devcontainer/nouveau/: Dockerfile  devcontainer.json
.devcontainer/nvidia/: Dockerfile  devcontainer.json
.docker/: Dockerfile
.github/: PULL_REQUEST_TEMPLATE.MD
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml
.github/workflows/: ci.yml  docker.yml  format.yml
docs/: camera_pose_calibration.md  flight_checklist.md  topic_documentation.md
micro_g/: CMakeLists.txt  package.xml
micro_g/config/: modes.yml  px100.yml
micro_g/launch/: controllers.launch.py  hw_interfaces.launch.py  hw_interfaces.launch.yml  micro_g.launch.py  micro_g.launch.yml  rosbag.launch.py  sim.launch.py
micro_g/scripts/: pose_servoing_controller.py
micro_g_controllers/: package.xml  setup.cfg  setup.py
micro_g_controllers/config/: grasp_selector.yml
micro_g_controllers/launch/: controllers.launch.py  grasp_selector.launch.py
micro_g_controllers/micro_g_controllers/: grasp_selector.py  grasp_selector_basic.py  grasp_selector_parameters.py  grasp_selector_predictive.py  linear_axis_controller.py  linear_axis_controller_parameters.py  pose_servoing_controller.py  pose_servoing_controller_parameters.py  whole_body_controller.py
micro_g_controllers/micro_g_controllers/params/: grasp_selector_basic_parameters.yml  grasp_selector_parameters.yml  grasp_selector_predictive_parameters.yml  linear_axis_controller_parameters.yml  pose_servoing_controller_parameters.yml  whole_body_controller_parameters.yml
micro_g_controllers/params/: grasp_selector_parameters.yaml  linear_axis_controller_parameters.yaml  pose_servoing_controller_parameters.yaml
micro_g_description/: CMakeLists.txt  package.xml
micro_g_description/gazebo/models/moon/: model.config  model.sdf
micro_g_description/gazebo/worlds/: micro_g.world
micro_g_description/rviz/: px100.rviz
micro_g_description/xacro/px100/: config.xacro  ros2_control.xacro  urdf.xacro
micro_g_gazebo_plugins/: CMakeLists.txt  package.xml
micro_g_gazebo_plugins/src/: TargetSpawnerPlugin.cc  TargetSpawnerPlugin.hh
micro_g_state/: package.xml  setup.cfg  setup.py
micro_g_state/micro_g_state/: state_machine.py
micro_g_state_machine/: package.xml  setup.cfg  setup.py
micro_g_state_machine/micro_g_state_machine/: state_machine.py
micro_g_telelop/: package.xml  setup.cfg  setup.py
micro_g_telelop/micro_g_telelop/: teleop.py
micro_g_vision/: package.xml  setup.cfg  setup.py
micro_g_vision/config/: apriltag.yml  ekf.yml  realsense.yml
micro_g_vision/launch/: vision.launch.py
micro_g_vision/micro_g_vision/: covariance_measurer.py  object_tracker.py
