<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micro_g_controllers</name>
  <version>0.0.1</version>
  <description>Controllers for micro-g</description>

  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <maintainer email="charles.dwsn@gmail.com">Charles Dawson</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/dawsonc/micro-g-robotics.git</url>
  <url type="bugtracker">https://github.com/dawsonc/micro-g-robotics/issues</url>

  <author>Evan Palmer</author>
  <author>Charles Dawson</author>

  <depend>interbotix_xs_msgs</depend>
  <depend>interbotix_xs_modules</depend>
  <depend>interbotix_xsarm_control</depend>
  <depend>python-transforms3d-pip</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
