<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>micro_g_description</name>
  <version>0.0.1</version>
  <description>Description files for micro-g</description>

  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <maintainer email="charles.dwsn@gmail.com">Charles Dawson</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/dawsonc/micro-g-robotics.git</url>
  <url type="bugtracker">https://github.com/dawsonc/micro-g-robotics/issues</url>

  <author>Evan Palmer</author>
  <author>Charles Dawson</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros_gz</depend>
  <depend>ros_gz_bridge</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
